# dw-python-clis

./: pyproject.toml
requirements/: requirements.local.txt
src/dw_python_clis/: __init__.py  config.py  deps.py  internal.py  utils.py
tasks/: __init__.py
